
public class AnimatorConst 
{
    public const string isJumping = "isJumping";
    public const string isCrouching = "isCrouching";
    public const string attack = "Attack";
    public const string receiveDamage = "ReceiveDamage";
    public const string die = "Die";
    public const string speed = "Speed";
}
